manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksklinnovationday-7f0c"
    labels:
        app: "aksklinnovationday-7f0c"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "aksklinnovationday-7f0c"
